--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 	</header>
 	
 	<section class="sub-header">
-		<img src="img/img.jpg" alt=""/>
+		<!--<img src="img/img.jpg" alt=""/>-->
+		<div class="sub-header-img">
+			
+		</div>
 		<div>
 			<h4>Bundle with any Hulu plan & save</h4>
 			<h3>Get Hulu, Disney+, and ESPN+.</h3>
