add live section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<section class="live">
 		<div class='live-border'>
 			<h4>Hulu + Live TV</h4>
-			<div class="texg-xl">Live TV Makes it Better</div>
+			<div class="text-xl">Live TV Makes it Better</div>
 			<div class="sub-text">Make the switch from the cable. Get 75+ top channels with your favorite live sports, news, and events - plus the entire Hulu streaming library</div>
 			<div class="legal-text">Live TV plans required. Regional restrictions, blackout and additional terms apply. see details</div>
 			<a href="#">VIEW CHANNELS IN YOUR AREA -></a>
