add categories section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,59 @@
 		</div>
 	</section>
 
+
+	<section class="categories">
+		<h4>Included in all plans</h4>
+		<div class="text-xl">All the TV You Love</div>
+		<div class="sub-text">Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu originals, kid shows and more.</div>
+		<div class="covers">
+
+			<div class="cover-1">
+				<div class="cover-grad"></div>
+				<div class="cover-text">
+					<div class="sub-title">Past & Current Seasons</div>
+					<h3>TV Shows</h3>
+				</div>
+			</div>
+
+			<div class="cover-2">
+				<div class="cover-grad"></div>
+				<div class="cover-text">
+					<div class="sub-title">New & Classics</div>
+					<h3>Movies</h3>
+				</div>
+			</div>
+
+			<div class="cover-3">
+				<div class="cover-grad"></div>
+				<div class="cover-text">
+					<div class="sub-title">Groundbreaking</div>
+					<h3>Hulu Originals</h3>
+				</div>
+			</div>
+
+			<div class="cover-4">
+				<div class="cover-grad"></div>
+				<div class="cover-text">
+					<div class="sub-title">Add-On</div>
+					<h3>Premiums</h3>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
+
+	<section class="live">
+		<div class='live-border'>
+			<h4>Hulu + Live TV</h4>
+			<div class="texg-xl">Live TV Makes it Better</div>
+			<div class="sub-text">Make the switch from the cable. Get 75+ top channels with your favorite live sports, news, and events - plus the entire Hulu streaming library</div>
+			<div class="legal-text">Live TV plans required. Regional restrictions, blackout and additional terms apply. see details</div>
+			<a href="#">VIEW CHANNELS IN YOUR AREA -></a>
+		</div>
+	</section>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
