--- a/index.html
+++ b/index.html
@@ -100,6 +100,31 @@
 		</div>
 	</section>
 
+	<section class="live-sports">
+		<div class="live-sports-content">
+			<div class="text-xl">Live Sports</div>
+			<div class="sub-text">Catch your games at home or on the go. Stream live games from major college and pro leagues including NCAA, NBA, NHL, NFL, and more.</div>
+
+
+			<div class="live-sports-logos">
+				<div>
+					<img src="../img/img.jpg" alt="logos">
+				</div>
+				<div>
+					<img src="../img/img.jpg" alt="logos">
+				</div>
+				<div>
+					<img src="../img/img.jpg" alt="logos">
+				</div>
+				<div>
+					<img src="../img/img.jpg" alt="logos">
+				</div>
+			</div>
+
+			<div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details. </div>
+		</div>
+	</section>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
