--- a/index.html
+++ b/index.html
@@ -125,6 +125,59 @@
 		</div>
 	</section>
 
+	<footer class="footer">
+		<div class="footer-container">
+			<div class="footer-lists">
+				<ul>
+					<li class="list-head">BROWSE</li>
+					<li class=""><a href="#">Streaming Library</a></li>
+					<li class=""><a href="#">Live TV</a></li>
+					<li class=""><a href="#">Live News</a></li>
+					<li class=""><a href="#">Live Sports</a></li>
+				</ul>
+				<ul>
+					<li class=""><a href="#">TV Shows</a></li>
+					<li class=""><a href="#">Movies</a></li>
+					<li class=""><a href="#">Originals</a></li>
+					<li class=""><a href="#">Networks</a></li>
+					<li class=""><a href="#">Kids</a></li>
+					<li class=""><a href="#">FX on Hulu</a></li>
+				</ul>
+				<ul>
+					<li class=""><a href="#">Hulu, Disney+, and ESPN+</a></li>
+					<li class=""><a href="#">Disney Bundle</a></li>
+					<li class=""><a href="#">HBO Max</a></li>
+					<li class=""><a href="#">Cinimax</a></li>
+					<li class=""><a href="#">Showtime</a></li>
+					<li class=""><a href="#">STARZ</a></li>
+				</ul>
+				<ul>
+					<li class="list-head">HELP</li>
+					<li class=""><a href="#">Account & Billing</a></li>
+					<li class=""><a href="#">Plans & Pricing</a></li>
+					<li class=""><a href="#">Supported Devices</a></li>
+					<li class=""><a href="#">Accessibility</a></li>
+				</ul>
+				<ul>
+					<li class="list-head">ABOUT US</li>
+					<li class=""><a href="#">Press</a></li>
+					<li class=""><a href="#">Jobs</a></li>
+					<li class=""><a href="#">Contact</a></li>
+				</ul>
+				
+			</div>
+
+			<div class="divider"></div>
+
+			<div class="social-icons">
+				<a href="#"><img src="../img/img.jpg" alt="social"/></a>
+				<a href="#"><img src="../img/img.jpg" alt="social"/></a>
+				<a href="#"><img src="../img/img.jpg" alt="social"/></a>
+				<a href="#"><img src="../img/img.jpg" alt="social"/></a>
+			</div>
+		</div>
+	</footer>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
