--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
 		</div>
 	</footer>
 
+	<div class="modal">
+		<div class="modal-box">
+			<div class="modal-body">
+				<h3>Log In</h3>
+				<form>
+					<div class="form-control">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email"/>	
+					</div>
+					<div class="form-control">
+						<label for="password">Password</label>
+						<input type="password" name="password" id="password"/>	
+					</div>
+					<p><a href="#">Forgot Password ?</a></p>
+					<button class="btn btn-dark">Log In</button>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<p>Don't have a account ? <a href="#">Sign Up</a></p>
+			</div>
+			<a href="#" class="close">X</a>
+		</div>
+	</div>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
