edit all monkeee text

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 			<h4>Try One Month Free</h4>
 			<img src="img/img.jpg" alt="logo" class="logo">
 			<div class="header-text-1">
-				Watch Thousands os TV and Shows and Movies
+				Watch Thousands of Monkee Shows and Monkey
 			</div>
 			<div class="header-text-2">
-				HBO Max, SHOWTIME, CINEMAX, STARZ Available was add-ons. 
+				Monkey Max, MONKEETIME, MONKEEMAX, MONKEEZ Available was add-ons. 
 			</div>
 			<button class="btn btn-cta">Start your Free Trial</button>
 			<div class="legal-text">
-				Free Trial for new and eligible returning subscribers only.
+				Free Trial for new and eligible returning monkee only.
 			</div>
 		</div>
 
@@ -37,8 +37,8 @@
 			
 		</div>
 		<div>
-			<h4>Bundle with any Hulu plan & save</h4>
-			<h3>Get Hulu, Disney+, and ESPN+.</h3>
+			<h4>Bundle with any Monkee plan & save</h4>
+			<h3>Get Monkee, Monkey+, and Monkee+.</h3>
 			<a href="#" class="sub-link">Details</a>
 		</div>
 		<div>
@@ -50,23 +50,23 @@
 
 	<section class="categories">
 		<h4>Included in all plans</h4>
-		<div class="text-xl">All the TV You Love</div>
-		<div class="sub-text">Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu originals, kid shows and more.</div>
+		<div class="text-xl">All the Monkey You Love</div>
+		<div class="sub-text">Stream full monkee of exclusive monkey, current-monkey episodes, hit monkeys, Monkee originals, monkeee shows and more.</div>
 		<div class="covers">
 
 			<div class="cover-1">
 				<div class="cover-grad"></div>
 				<div class="cover-text">
-					<div class="sub-title">Past & Current Seasons</div>
-					<h3>TV Shows</h3>
+					<div class="sub-title">Past & Current Monkkeee</div>
+					<h3>Monkeyys Shows</h3>
 				</div>
 			</div>
 
 			<div class="cover-2">
 				<div class="cover-grad"></div>
 				<div class="cover-text">
-					<div class="sub-title">New & Classics</div>
-					<h3>Movies</h3>
+					<div class="sub-title">New Monkee & Classics</div>
+					<h3>Monkeeeey</h3>
 				</div>
 			</div>
 
@@ -74,7 +74,7 @@
 				<div class="cover-grad"></div>
 				<div class="cover-text">
 					<div class="sub-title">Groundbreaking</div>
-					<h3>Hulu Originals</h3>
+					<h3>Monkeyyy Originals</h3>
 				</div>
 			</div>
 
@@ -92,18 +92,18 @@
 
 	<section class="live">
 		<div class='live-border'>
-			<h4>Hulu + Live TV</h4>
-			<div class="text-xl">Live TV Makes it Better</div>
-			<div class="sub-text">Make the switch from the cable. Get 75+ top channels with your favorite live sports, news, and events - plus the entire Hulu streaming library</div>
-			<div class="legal-text">Live TV plans required. Regional restrictions, blackout and additional terms apply. see details</div>
-			<a href="#">VIEW CHANNELS IN YOUR AREA -></a>
+			<h4>Monke + Monkey TV</h4>
+			<div class="text-xl">Live MONKE Makes it Better</div>
+			<div class="sub-text">Make the switch from the monkey. Get 75+ top monkee with your favorite monkeee sports, news, and events - plus the entire Monke streaming library</div>
+			<div class="legal-text">Live Monkee plans required. Regional restrictions, blackout and additional terms apply. see details</div>
+			<a href="#">VIEW MONKEEEE IN YOUR AREA -></a>
 		</div>
 	</section>
 
 	<section class="live-sports">
 		<div class="live-sports-content">
 			<div class="text-xl">Live Sports</div>
-			<div class="sub-text">Catch your games at home or on the go. Stream live games from major college and pro leagues including NCAA, NBA, NHL, NFL, and more.</div>
+			<div class="sub-text">Catch your monkey at home or on the go. Stream live monkee from major college and pro leagues including MNKE, MNK, MKY, MNKY, and more.</div>
 
 
 			<div class="live-sports-logos">
@@ -121,7 +121,7 @@
 				</div>
 			</div>
 
-			<div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details. </div>
+			<div class="legal-text">Live Monkee plans required. Regional restrictions, blackouts and additional terms apply. See details. </div>
 		</div>
 	</section>
 
@@ -131,25 +131,25 @@
 				<ul>
 					<li class="list-head">BROWSE</li>
 					<li class=""><a href="#">Streaming Library</a></li>
-					<li class=""><a href="#">Live TV</a></li>
-					<li class=""><a href="#">Live News</a></li>
-					<li class=""><a href="#">Live Sports</a></li>
+					<li class=""><a href="#">Live MONKE</a></li>
+					<li class=""><a href="#">Live MONKE News</a></li>
+					<li class=""><a href="#">Live MONKE Sports</a></li>
 				</ul>
 				<ul>
-					<li class=""><a href="#">TV Shows</a></li>
+					<li class=""><a href="#">MONKE Shows</a></li>
 					<li class=""><a href="#">Movies</a></li>
 					<li class=""><a href="#">Originals</a></li>
 					<li class=""><a href="#">Networks</a></li>
-					<li class=""><a href="#">Kids</a></li>
-					<li class=""><a href="#">FX on Hulu</a></li>
+					<li class=""><a href="#">Monkey</a></li>
+					<li class=""><a href="#">FX on MONKE</a></li>
 				</ul>
 				<ul>
-					<li class=""><a href="#">Hulu, Disney+, and ESPN+</a></li>
-					<li class=""><a href="#">Disney Bundle</a></li>
-					<li class=""><a href="#">HBO Max</a></li>
-					<li class=""><a href="#">Cinimax</a></li>
-					<li class=""><a href="#">Showtime</a></li>
-					<li class=""><a href="#">STARZ</a></li>
+					<li class=""><a href="#">Monkee, monkey+, and monkeyy+</a></li>
+					<li class=""><a href="#">Monkey Bundle</a></li>
+					<li class=""><a href="#">Monke Max</a></li>
+					<li class=""><a href="#">Cinimonkee</a></li>
+					<li class=""><a href="#">Monketime</a></li>
+					<li class=""><a href="#">MONKEEZ</a></li>
 				</ul>
 				<ul>
 					<li class="list-head">HELP</li>
