fixes and fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HULU Clone</title>
+	<title>MONKEEEEEEE</title>
 	<link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
